# openapi/api.yaml
@@ -510,6 +510,7 @@ components:
           $ref: "#/components/schemas/PostgresSetting"
     RoleAccessLevel:
       type: string
+      description: Admin > Elevated > Standard > Limited
       enum:
         - admin
         - elevated
@@ -524,10 +525,10 @@ components:
       required:
         - id
         - name
+        - isGroup
         - accessLevel
-        - memberOf
+        - membership
         - flags
-        - capabilities
       x-go-type: entities.RoleView
       x-go-type-import:
         path: dashboard/api/internal/scopes/cluster/entities
@@ -537,18 +538,25 @@ components:
           type: string
         name:
           type: string
-        memberOf:
+        isGroup:
+          type: boolean
+        membership:
           type: array
           items:
-            type: string
+            type: object
+            required:
+              - name
+              - description
+            properties:
+              name:
+                type: string
+              description:
+                type: string
         flags:
+          # ТИПИЗИРОВАТЬ!
           type: array
           items:
             nullable: true
             type: string
         accessLevel:
           $ref: "#/components/schemas/RoleAccessLevel"
-        capabilities:
-          type: array
-          items:
-            type: string
